Refactor authentication configuration by removing UAT (Authorization) service references and updating related documentation.
- Replaced `uat.*` parameters with `serviceapi.auth.*` in various files, including Makefile, deployment guides, and values schema.
- Updated README and other documentation to reflect the removal of UAT service and changes in authentication settings.
- Adjusted pod disruption budgets and readiness tests to exclude UAT service checks.